# simd-bmh

./: Cargo.toml  README.md
crates/simd-bmh/: Cargo.toml
crates/simd-bmh-macro/: Cargo.toml
crates/simd-bmh-macro/src/: lib.rs
crates/simd-bmh/benches/: bench.rs
crates/simd-bmh/src/: lib.rs
