[package]
name = "simd-bmh"
version = "0.1.1"
edition = "2024"

description = "SIMD-optimized search with wildcard nibbles"
license = "MIT OR Apache-2.0"
authors = ["oberrich <oberrich@img.ws>"]
repository = "https://github.com/oberrich/simd-bmh"

[dependencies]
simd-bmh-macro = "0.1.0"

[dev-dependencies]
criterion = "0.5"
rand = "0.9"

[[bench]]
name = "bench"
harness = false